FIX: negative gap removed in addpost form in overlay under spinner

--- a/src/styles/_addPost.scss
+++ b/src/styles/_addPost.scss
@@ -138,7 +138,6 @@
         @include media-breakpoint-up($desktop-breakpoint) {
           border-bottom-left-radius: 0;
           border-bottom-right-radius: 0;
-          margin-top: -60px;
         }
       }
     }
